adding more bare-bones thrust model estimation

--- a/sysid/analyze.ipynb
+++ b/sysid/analyze.ipynb
@@ -23,7 +23,7 @@
     "else:\n",
     "    raise ValueError(\"Unknown model name\")\n",
     "\n",
-    "from process import throttle_thrust, find_tau, fit_tau, plot_thrust_curve, torque_angular_acceleration, fit_inertia, plot_torque_angular_acceleration_curve\n",
+    "from process import throttle_thrust, find_tau, fit_tau, plot_thrust_curve, torque_angular_thrust, fit_inertia, plot_torque_angular_acceleration_curve\n",
     "import numpy as np"
    ]
   },
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grep = \"actuator_motors_mux\"\n",
+    "grep = \"attitude\"\n",
     "[col for col in dfs[0].columns if grep in col]"
    ]
   },
@@ -226,7 +226,7 @@
     "\n",
     "acceleration = thrust / model.mass\n",
     "real_acceleration = (acceleration - model.gravity).abs()\n",
-    "real_acceleration_percentile = real_acceleration.quantile(percentile)\n",
+    "real_thrust_percentile = real_acceleration.quantile(percentile)\n",
     "hovering_throttles = (throttle[real_acceleration < real_acceleration_percentile]/4) ** 0.5\n",
     "hovering_throttle = hovering_throttles.median()\n",
     "plt.title(\"Hovering Throttle Distribution\")\n",
@@ -390,7 +390,7 @@
     "    z_inertia_estimation_files = [3]\n",
     "else: \n",
     "    raise ValueError(\"Unknown model name\")\n",
-    "dfs_tac = [torque_angular_acceleration(df, model, output_topic, tau, slope, intercept) for df in [dfs[i] for i in z_inertia_estimation_files]]"
+    "dfs_tac = [torque_angular_thrust(df, model, output_topic, tau, slope, intercept) for df in [dfs[i] for i in z_inertia_estimation_files]]"
    ]
   },
   {
@@ -484,6 +484,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(f\"rotor_positions: \\n{model.rotor_positions}\")\n",
     "print(f\"rotor_thrust_directions: \\n{model.rotor_thrust_directions}\")\n",
@@ -498,6 +505,354 @@
     "print(f\"Iyy: {I_y:.5f}\")\n",
     "print(f\"Izz: {I_z:.5f}\")\n",
     "print(f\"hovering_throttle: {hovering_throttle:.5f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nan_cols = dfs[0].interpolate().isna().sum()\n",
+    "for c in nan_cols[nan_cols > 0].items():\n",
+    "    print(c)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wanted_columns = [\n",
+    "    *[f\"vehicle_attitude_q[{i}]\" for i in range(4)],\n",
+    "    *[f\"vehicle_acceleration_xyz[{i}]\" for i in range(3)],\n",
+    "    *[f\"vehicle_angular_velocity_xyz[{i}]\" for i in range(3)],\n",
+    "    *[f\"vehicle_angular_velocity_xyz_derivative[{i}]\" for i in range(3)],\n",
+    "    *[f\"{output_topic}_control[{i}]\" for i in range(4)],\n",
+    "]\n",
+    "\n",
+    "# flights => timeseries (timestamp + single value) => split up into separate time-series based on gaps\n",
+    "\n",
+    "flights = [{name: {\"timestamps\": np.array(c.index), \"values\": np.array(c)} for name, c in [(wc, df[wc].dropna()) for wc in wanted_columns]} for df in dfs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flights_subflights = []\n",
+    "for flight_i, flight in enumerate(flights):\n",
+    "    # flight_i = 0\n",
+    "    flight = flights[flight_i]\n",
+    "    lowest_frequency = None\n",
+    "    lowest_frequency_name = None\n",
+    "    highest_frequency = None\n",
+    "    highest_frequency_name = None\n",
+    "    for name, data in flight.items():\n",
+    "        diff = np.diff(data[\"timestamps\"])\n",
+    "        frequency = 1/np.median(diff)\n",
+    "        if lowest_frequency is None or frequency < lowest_frequency:\n",
+    "            lowest_frequency = frequency\n",
+    "            lowest_frequency_name = name\n",
+    "        if highest_frequency is None or frequency > highest_frequency:\n",
+    "            highest_frequency = frequency\n",
+    "            highest_frequency_name = name\n",
+    "        # print(f\"{name}: {1/np.median(diff)}\")\n",
+    "\n",
+    "    interval_threshold = 3 * 1/lowest_frequency\n",
+    "    print(f\"Lowest frequency: {lowest_frequency} for {lowest_frequency_name}\")\n",
+    "    print(f\"Highest frequency: {highest_frequency} for {highest_frequency_name}\")\n",
+    "\n",
+    "    earliest_timestamp_all = max([data[\"timestamps\"][0] for name, data in flight.items()])\n",
+    "    latest_timestamp_all = min([data[\"timestamps\"][-1] for name, data in flight.items()])\n",
+    "    print(f\"Earliest timestamp_all: {earliest_timestamp_all}\")\n",
+    "    print(f\"Latest timestamp_all: {latest_timestamp_all}\")\n",
+    "    master_timestamps_full = flight[highest_frequency_name][\"timestamps\"]\n",
+    "    master_timestamps = master_timestamps_full[(master_timestamps_full > earliest_timestamp_all) & (master_timestamps_full < latest_timestamp_all)]\n",
+    "    earliest_timestamp = master_timestamps[0]\n",
+    "    latest_timestamp = master_timestamps[-1]\n",
+    "    print(f\"Cutting {(100 * (1 - len(master_timestamps) / len(master_timestamps_full))):.2f}% of the data to synchronize the timestamp start and end\")\n",
+    "\n",
+    "    total_time = latest_timestamp - earliest_timestamp\n",
+    "\n",
+    "    gaps = []\n",
+    "    for name, data in flight.items():\n",
+    "        current_timestamps_full = data[\"timestamps\"]\n",
+    "        current_timestamps = current_timestamps_full[(current_timestamps_full > earliest_timestamp) & (current_timestamps_full < latest_timestamp)]\n",
+    "        current_timestamps_augmented = np.concatenate([[earliest_timestamp], current_timestamps, [latest_timestamp]])\n",
+    "        diff = np.diff(current_timestamps_augmented)\n",
+    "        current_gaps = np.where(diff > interval_threshold)[0]\n",
+    "        for gap in current_gaps:\n",
+    "            gap_start = data[\"timestamps\"][gap]\n",
+    "            gap_end = data[\"timestamps\"][gap+1]\n",
+    "            gaps.append((gap_start, gap_end))\n",
+    "    gaps_sorted = sorted(gaps, key=lambda x: x[0])\n",
+    "\n",
+    "\n",
+    "    current_gap_start = None\n",
+    "    current_gap_end = None\n",
+    "    combined_gaps = []\n",
+    "\n",
+    "    for i, (gap_start, gap_end) in enumerate(gaps_sorted):\n",
+    "        if current_gap_start is None:\n",
+    "            current_gap_start = gap_start\n",
+    "        \n",
+    "        if current_gap_end is None:\n",
+    "            current_gap_end = gap_end\n",
+    "        \n",
+    "        if gap_end > current_gap_end:\n",
+    "            current_gap_end = gap_end\n",
+    "        \n",
+    "        if i < len(gaps_sorted) - 1:\n",
+    "            next_gap_start, next_gap_end = gaps_sorted[i+1]\n",
+    "            if next_gap_start - current_gap_end > interval_threshold:\n",
+    "                print(f\"Gap: {current_gap_start} - {current_gap_end}\")\n",
+    "                combined_gaps.append((current_gap_start, current_gap_end))\n",
+    "                current_gap_start = None\n",
+    "                current_gap_end = None\n",
+    "        else:\n",
+    "            print(f\"Gap start {gap_start} - {gap_end}\")\n",
+    "            print(f\"Final Gap: {current_gap_start} - {current_gap_end}\")\n",
+    "            combined_gaps.append((current_gap_start, current_gap_end))\n",
+    "    print(f\"Number of gaps: {len(combined_gaps)}\")\n",
+    "\n",
+    "    total_gap_time = sum([gap_end - gap_start for gap_start, gap_end in combined_gaps])\n",
+    "    assert total_gap_time < 0.1 * total_time, f\"Total gap time: {total_gap_time:.2f}s\"\n",
+    "\n",
+    "    subflights = []\n",
+    "    current_segment_start_timestamp = earliest_timestamp\n",
+    "    for gap_start, gap_end in [*combined_gaps, (latest_timestamp, latest_timestamp)]:\n",
+    "        segment_time = gap_start - current_segment_start_timestamp\n",
+    "        if segment_time > 0.01 * total_time:\n",
+    "            current_segment_timestamps = master_timestamps[(master_timestamps > current_segment_start_timestamp) & (master_timestamps < gap_start)]\n",
+    "            sub_flight = {\n",
+    "                name: {\n",
+    "                    \"timestamps\": current_segment_timestamps,\n",
+    "                    \"values\": np.interp(current_segment_timestamps, data[\"timestamps\"], data[\"values\"])\n",
+    "                } for name, data in flight.items()\n",
+    "            }\n",
+    "            subflights.append(sub_flight)\n",
+    "        else:\n",
+    "            print(f\"Skipping segment of length {segment_time:.2f}s\")\n",
+    "        current_segment_start_timestamp = gap_end\n",
+    "    print(f\"Number of subflights: {len(subflights)}\")\n",
+    "    print(subflights[0].keys())\n",
+    "\n",
+    "\n",
+    "    for subflight in subflights:\n",
+    "        plt.figure()\n",
+    "        plt.title(flight_i)\n",
+    "        for i, key in enumerate([f\"actuator_motors_mux_control[{i}]\" for i in range(4)]):\n",
+    "            ts = subflight[key]\n",
+    "            plt.plot(ts[\"timestamps\"], ts[\"values\"], label=f\"motor {i}\")\n",
+    "        plt.legend()\n",
+    "    \n",
+    "    flights_subflights.append(subflights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.spatial.transform import Rotation as R\n",
+    "rotor_x_displacement = 0.4179/2\n",
+    "rotor_y_displacement = 0.481332/2\n",
+    "# model is in FLU frame\n",
+    "model = {\n",
+    "    \"gravity\": 9.81,\n",
+    "    \"mass\": 2.3 + 1.05,\n",
+    "    \"rotor_positions\": np.array([\n",
+    "        [ rotor_x_displacement, -rotor_y_displacement, 0],\n",
+    "        [-rotor_x_displacement,  rotor_y_displacement, 0],\n",
+    "        [ rotor_x_displacement,  rotor_y_displacement, 0],\n",
+    "        [-rotor_x_displacement, -rotor_y_displacement, 0]\n",
+    "    ]),\n",
+    "    \"rotor_thrust_directions\": np.array([\n",
+    "        [0, 0, 1],\n",
+    "        [0, 0, 1],\n",
+    "        [0, 0, 1],\n",
+    "        [0, 0, 1]\n",
+    "    ]),\n",
+    "    \"rotor_torque_directions\": np.array([\n",
+    "        [0, 0, -1],\n",
+    "        [0, 0, -1],\n",
+    "        [0, 0,  1],\n",
+    "        [0, 0,  1]\n",
+    "    ])\n",
+    "}\n",
+    "g = np.array([0, 0, -model[\"gravity\"]])\n",
+    "\n",
+    "def FRD2FLU(x):\n",
+    "    return np.array([x[0], -x[1], -x[2]])\n",
+    "\n",
+    "def FRD2FLU_quat(q):\n",
+    "    return R.from_quat([q[1], -q[2], -q[3], q[0]])\n",
+    "\n",
+    "\n",
+    "b = []\n",
+    "A = []\n",
+    "T_m = 0.05\n",
+    "previous_t = None\n",
+    "rpms = []\n",
+    "exponents = [0, 2]\n",
+    "\n",
+    "\n",
+    "def filter_rpms(rpm_setpoint, T_m):\n",
+    "    rpms = []\n",
+    "    for rpm in rpm_setpoint:\n",
+    "        if rpm is None:\n",
+    "            rpm = rpm_setpoint\n",
+    "        else:\n",
+    "            delta_t = t - previous_t\n",
+    "            alpha = np.exp(-delta_t / T_m)\n",
+    "            rpm = alpha*rpm + (1-alpha) * rpm_setpoint\n",
+    "    return np.array(rpms)\n",
+    "\n",
+    "for flight in flights_subflights:\n",
+    "    for subflight in flight:\n",
+    "        print(f\"subflight keys: {subflight}\")\n",
+    "        rpm = None\n",
+    "        for step_i in range(len(subflight[highest_frequency_name][\"timestamps\"])):\n",
+    "            t = subflight[highest_frequency_name][\"timestamps\"][step_i]\n",
+    "            acceleration = FRD2FLU(np.array([subflight[f\"vehicle_acceleration_xyz[{i}]\"][\"values\"][step_i] for i in range(3)]))\n",
+    "            b.append(model[\"mass\"] * acceleration)\n",
+    "            rpm_setpoint = np.array([subflight[f\"actuator_motors_mux_control[{i}]\"][\"values\"][step_i] for i in range(4)])\n",
+    "            current_A = []\n",
+    "            for motor_i in range(4):\n",
+    "                for exponent in exponents:\n",
+    "                    current_A.append(model[\"rotor_thrust_directions\"][motor_i] * rpm[motor_i] ** exponent)\n",
+    "            A.append(np.array(current_A).T)\n",
+    "\n",
+    "            rpms.append(rpm)\n",
+    "            previous_t = t\n",
+    "        \n",
+    "\n",
+    "rpms = np.array(rpms)\n",
+    "\n",
+    "A = np.array(A).reshape(-1, 4 * len(exponents))\n",
+    "b = np.array(b).reshape(-1)\n",
+    "print(f\"A shape: {A.shape}\")\n",
+    "print(f\"b shape: {b.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K_f = np.linalg.lstsq(A, b, rcond=None)[0].reshape(-1, len(exponents))\n",
+    "K_f_mean = K_f.mean(axis=0)\n",
+    "print(K_f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example_flight = flights[0]\n",
+    "# plt.figure()\n",
+    "# for i in range(4):\n",
+    "#     plt.plot(flight[highest_frequency_name][\"timestamps\"], flight[f\"actuator_motors_mux_control[{i}]\"][\"values\"], label=f\"setpoint {i}\")\n",
+    "#     plt.plot(flight[highest_frequency_name][\"timestamps\"], rpms[:, i], label=f\"actual {i}\")\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_flight = flights[0]\n",
+    "motor_model = lambda i, rpm: K_f[i] @ np.array([rpm ** exponent for exponent in exponents])\n",
+    "combine_motor_models = lambda rpms: np.array([motor_model(i, rpm) for i, rpm in enumerate(rpms)]).sum(axis=0)\n",
+    "plt.figure()\n",
+    "plt.title(\"Predicted vs Actual Thrust (individual motor models)\")\n",
+    "predicted_thrust = np.array(list(map(combine_motor_models, rpms)))\n",
+    "actual_thrust = -example_flight[\"vehicle_acceleration_xyz[2]\"][\"values\"] * model[\"mass\"]\n",
+    "motor_models_description = \"\\n\".join([f\"motor {i}: {', '.join([f'K_f{exponent}={k:.2f}' for exponent, k in zip(exponents, K_f[i])])}\" for i in range(4)])\n",
+    "plt.scatter(predicted_thrust, actual_thrust, s=0.1, label=motor_models_description)\n",
+    "min_thrust = min(predicted_thrust.min(), actual_thrust.min())\n",
+    "max_thrust = max(predicted_thrust.max(), actual_thrust.max())\n",
+    "print(f\"min_thrust: {min_thrust:.3f}\")\n",
+    "print(f\"max_thrust: {max_thrust:.3f}\")\n",
+    "plt.plot([min_thrust, max_thrust], [min_thrust, max_thrust] , color=\"red\")\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert len(K_f_mean) == 2\n",
+    "plt.figure()\n",
+    "plt.title(\"Mean motor model\")\n",
+    "label = f\"model: {', '.join([f'K_f{exponent}={k:.2f}' for exponent, k in zip(exponents, K_f_mean)])}\"\n",
+    "plt.scatter((rpms ** 2).sum(axis=1), actual_thrust, s=0.1, label=label)\n",
+    "inputs = np.linspace(rpms.min(), (rpms**2).sum(axis=1).max(), 100)\n",
+    "plt.plot(inputs, np.array([K_f_mean[0]*4 + K_f_mean[1] * ip for ip in inputs]) , color=\"red\")\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "lowest_frequency = None\n",
+    "lowest_frequency_column = None\n",
+    "for c in wanted_columns:\n",
+    "    freq = 1/dfs[0][c].dropna().index.to_series().diff().median()\n",
+    "    if lowest_frequency is None or freq < lowest_frequency:\n",
+    "        lowest_frequency = freq\n",
+    "        lowest_frequency_column = c\n",
+    "\n",
+    "print(f\"Lowest frequency: {lowest_frequency:.3f} Hz ({lowest_frequency_column})\")\n",
+    "\n",
+    "time_series_separation_threshold = 3 * 1/lowest_frequency\n",
+    "\n",
+    "dropout_timestamps = []\n",
+    "for c in wanted_columns:\n",
+    "    diff = dfs[0][c].dropna().index.to_series().diff()\n",
+    "    dropout_indices = [diff > time_series_separation_threshold].index\n",
+    "\n",
+    "    for dropout in dropouts:\n",
+    "        start = \n",
+    "        print(f\"Column {c} has dropout at {dropout}\")\n",
+    "    dropout_timestamps.extend(dropouts)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# dfs_interp = [df[wanted_columns].interpolate().dropna() for df in dfs]\n",
+    "dropout_timestamps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff = dfs_interp[0].index.to_series().diff()\n",
+    "interval = diff.median()\n",
+    "# plt.plot(dfs_interp[0].index.to_series().diff() > interval * 100)\n",
+    "\n",
+    "diff.quantile(0.999)"
    ]
   }
  ],
