--- a/sysid/analyze.ipynb
+++ b/sysid/analyze.ipynb
@@ -23,7 +23,7 @@
     "else:\n",
     "    raise ValueError(\"Unknown model name\")\n",
     "\n",
-    "from process import throttle_thrust, find_tau, fit_tau, plot_thrust_curve, torque_angular_thrust, fit_inertia, plot_torque_angular_acceleration_curve\n",
+    "from process import throttle_thrust, find_tau, fit_tau, plot_thrust_curve, torque_angular_acceleration, fit_inertia, plot_torque_angular_acceleration_curve\n",
     "import numpy as np"
    ]
   },
@@ -226,7 +226,7 @@
     "\n",
     "acceleration = thrust / model.mass\n",
     "real_acceleration = (acceleration - model.gravity).abs()\n",
-    "real_thrust_percentile = real_acceleration.quantile(percentile)\n",
+    "real_acceleration_percentile = real_acceleration.quantile(percentile)\n",
     "hovering_throttles = (throttle[real_acceleration < real_acceleration_percentile]/4) ** 0.5\n",
     "hovering_throttle = hovering_throttles.median()\n",
     "plt.title(\"Hovering Throttle Distribution\")\n",
@@ -390,7 +390,7 @@
     "    z_inertia_estimation_files = [3]\n",
     "else: \n",
     "    raise ValueError(\"Unknown model name\")\n",
-    "dfs_tac = [torque_angular_thrust(df, model, output_topic, tau, slope, intercept) for df in [dfs[i] for i in z_inertia_estimation_files]]"
+    "dfs_tac = [torque_angular_acceleration(df, model, output_topic, tau, slope, intercept) for df in [dfs[i] for i in z_inertia_estimation_files]]"
    ]
   },
   {
@@ -698,41 +698,54 @@
     "A = []\n",
     "T_m = 0.05\n",
     "previous_t = None\n",
-    "rpms = []\n",
+    "rpms = None\n",
     "exponents = [0, 2]\n",
     "\n",
+    "accelerations = []\n",
     "\n",
-    "def filter_rpms(rpm_setpoint, T_m):\n",
-    "    rpms = []\n",
-    "    for rpm in rpm_setpoint:\n",
+    "\n",
+    "def filter_rpms(timestamps, rpm_setpoints, T_m):\n",
+    "    rpms_filtered = []\n",
+    "    rpm = None\n",
+    "    previous_t = None\n",
+    "    for t, rpm_setpoint in zip(timestamps, rpm_setpoints):\n",
     "        if rpm is None:\n",
     "            rpm = rpm_setpoint\n",
     "        else:\n",
     "            delta_t = t - previous_t\n",
     "            alpha = np.exp(-delta_t / T_m)\n",
     "            rpm = alpha*rpm + (1-alpha) * rpm_setpoint\n",
-    "    return np.array(rpms)\n",
+    "        rpms_filtered.append(rpm)\n",
+    "        previous_t = t\n",
+    "    return np.array(rpms_filtered)\n",
     "\n",
     "for flight in flights_subflights:\n",
     "    for subflight in flight:\n",
-    "        print(f\"subflight keys: {subflight}\")\n",
-    "        rpm = None\n",
-    "        for step_i in range(len(subflight[highest_frequency_name][\"timestamps\"])):\n",
+    "        num_steps = len(subflight[highest_frequency_name][\"timestamps\"])\n",
+    "        rpm_setpoints = np.array([[subflight[f\"{output_topic}_control[{i}]\"][\"values\"][step_i] for i in range(4)] for step_i in range(num_steps)])\n",
+    "        timestamps = subflight[highest_frequency_name][\"timestamps\"]\n",
+    "        rpms_subflight = filter_rpms(timestamps, rpm_setpoints, T_m)\n",
+    "        for step_i in range(num_steps):\n",
     "            t = subflight[highest_frequency_name][\"timestamps\"][step_i]\n",
     "            acceleration = FRD2FLU(np.array([subflight[f\"vehicle_acceleration_xyz[{i}]\"][\"values\"][step_i] for i in range(3)]))\n",
+    "            accelerations.append(acceleration)\n",
     "            b.append(model[\"mass\"] * acceleration)\n",
-    "            rpm_setpoint = np.array([subflight[f\"actuator_motors_mux_control[{i}]\"][\"values\"][step_i] for i in range(4)])\n",
     "            current_A = []\n",
+    "            rpm = rpms_subflight[step_i]\n",
     "            for motor_i in range(4):\n",
     "                for exponent in exponents:\n",
     "                    current_A.append(model[\"rotor_thrust_directions\"][motor_i] * rpm[motor_i] ** exponent)\n",
     "            A.append(np.array(current_A).T)\n",
-    "\n",
-    "            rpms.append(rpm)\n",
     "            previous_t = t\n",
+    "        \n",
+    "        if rpms is None:\n",
+    "            rpms = rpms_subflight\n",
+    "        else:\n",
+    "            rpms = np.append(rpms, rpms_subflight, axis=0)\n",
     "        \n",
     "\n",
     "rpms = np.array(rpms)\n",
+    "accelerations = np.array(accelerations)\n",
     "\n",
     "A = np.array(A).reshape(-1, 4 * len(exponents))\n",
     "b = np.array(b).reshape(-1)\n",
@@ -771,13 +784,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_flight = flights[0]\n",
+    "rpms.shape\n",
+    "# accelerations.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rpm_setpoints = np.array([[subflight[f\"{output_topic}_control[{i}]\"][\"values\"][step_i] for i in range(4)] for step_i in range(num_steps)])\n",
     "motor_model = lambda i, rpm: K_f[i] @ np.array([rpm ** exponent for exponent in exponents])\n",
     "combine_motor_models = lambda rpms: np.array([motor_model(i, rpm) for i, rpm in enumerate(rpms)]).sum(axis=0)\n",
     "plt.figure()\n",
     "plt.title(\"Predicted vs Actual Thrust (individual motor models)\")\n",
     "predicted_thrust = np.array(list(map(combine_motor_models, rpms)))\n",
-    "actual_thrust = -example_flight[\"vehicle_acceleration_xyz[2]\"][\"values\"] * model[\"mass\"]\n",
+    "actual_thrust = accelerations[:, 2] * model[\"mass\"]\n",
     "motor_models_description = \"\\n\".join([f\"motor {i}: {', '.join([f'K_f{exponent}={k:.2f}' for exponent, k in zip(exponents, K_f[i])])}\" for i in range(4)])\n",
     "plt.scatter(predicted_thrust, actual_thrust, s=0.1, label=motor_models_description)\n",
     "min_thrust = min(predicted_thrust.min(), actual_thrust.min())\n",
