improving data handling

--- a/sysid/analyze.ipynb
+++ b/sysid/analyze.ipynb
@@ -534,7 +534,17 @@
     "\n",
     "# flights => timeseries (timestamp + single value) => split up into separate time-series based on gaps\n",
     "\n",
-    "flights = [{name: {\"timestamps\": np.array(c.index), \"values\": np.array(c)} for name, c in [(wc, df[wc].dropna()) for wc in wanted_columns]} for df in dfs]"
+    "flights = [\n",
+    "    {\n",
+    "        \"name\": name,\n",
+    "        \"data\": {\n",
+    "            name: {\n",
+    "                \"timestamps\": np.array(c.index),\n",
+    "                \"values\": np.array(c)\n",
+    "            } for name, c in [(wc, df[wc].dropna()) for wc in wanted_columns]\n",
+    "        }\n",
+    "    } for name, df in zip(ulog_files, dfs)\n",
+    "]"
    ]
   },
   {
@@ -543,114 +553,119 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flights_subflights = []\n",
-    "for flight_i, flight in enumerate(flights):\n",
-    "    # flight_i = 0\n",
-    "    flight = flights[flight_i]\n",
-    "    lowest_frequency = None\n",
-    "    lowest_frequency_name = None\n",
-    "    highest_frequency = None\n",
-    "    highest_frequency_name = None\n",
-    "    for name, data in flight.items():\n",
-    "        diff = np.diff(data[\"timestamps\"])\n",
-    "        frequency = 1/np.median(diff)\n",
-    "        if lowest_frequency is None or frequency < lowest_frequency:\n",
-    "            lowest_frequency = frequency\n",
-    "            lowest_frequency_name = name\n",
-    "        if highest_frequency is None or frequency > highest_frequency:\n",
-    "            highest_frequency = frequency\n",
-    "            highest_frequency_name = name\n",
-    "        # print(f\"{name}: {1/np.median(diff)}\")\n",
+    "def slice_gaps_and_interpolate(flights):\n",
+    "    flights_output = []\n",
+    "    for flight in flights:\n",
+    "        lowest_frequency = None\n",
+    "        lowest_frequency_name = None\n",
+    "        highest_frequency = None\n",
+    "        highest_frequency_name = None\n",
+    "        for name, data in flight[\"data\"].items():\n",
+    "            diff = np.diff(data[\"timestamps\"])\n",
+    "            frequency = 1/np.median(diff)\n",
+    "            if lowest_frequency is None or frequency < lowest_frequency:\n",
+    "                lowest_frequency = frequency\n",
+    "                lowest_frequency_name = name\n",
+    "            if highest_frequency is None or frequency > highest_frequency:\n",
+    "                highest_frequency = frequency\n",
+    "                highest_frequency_name = name\n",
+    "            # print(f\"{name}: {1/np.median(diff)}\")\n",
     "\n",
-    "    interval_threshold = 3 * 1/lowest_frequency\n",
-    "    print(f\"Lowest frequency: {lowest_frequency} for {lowest_frequency_name}\")\n",
-    "    print(f\"Highest frequency: {highest_frequency} for {highest_frequency_name}\")\n",
+    "        interval_threshold = 3 * 1/lowest_frequency\n",
+    "        print(f\"Lowest frequency: {lowest_frequency} for {lowest_frequency_name}\")\n",
+    "        print(f\"Highest frequency: {highest_frequency} for {highest_frequency_name}\")\n",
     "\n",
-    "    earliest_timestamp_all = max([data[\"timestamps\"][0] for name, data in flight.items()])\n",
-    "    latest_timestamp_all = min([data[\"timestamps\"][-1] for name, data in flight.items()])\n",
-    "    print(f\"Earliest timestamp_all: {earliest_timestamp_all}\")\n",
-    "    print(f\"Latest timestamp_all: {latest_timestamp_all}\")\n",
-    "    master_timestamps_full = flight[highest_frequency_name][\"timestamps\"]\n",
-    "    master_timestamps = master_timestamps_full[(master_timestamps_full > earliest_timestamp_all) & (master_timestamps_full < latest_timestamp_all)]\n",
-    "    earliest_timestamp = master_timestamps[0]\n",
-    "    latest_timestamp = master_timestamps[-1]\n",
-    "    print(f\"Cutting {(100 * (1 - len(master_timestamps) / len(master_timestamps_full))):.2f}% of the data to synchronize the timestamp start and end\")\n",
+    "        earliest_timestamp_all = max([data[\"timestamps\"][0] for name, data in flight[\"data\"].items()])\n",
+    "        latest_timestamp_all = min([data[\"timestamps\"][-1] for name, data in flight[\"data\"].items()])\n",
+    "        print(f\"Earliest timestamp_all: {earliest_timestamp_all}\")\n",
+    "        print(f\"Latest timestamp_all: {latest_timestamp_all}\")\n",
+    "        master_timestamps_full = flight[\"data\"][highest_frequency_name][\"timestamps\"]\n",
+    "        master_timestamps = master_timestamps_full[(master_timestamps_full > earliest_timestamp_all) & (master_timestamps_full < latest_timestamp_all)]\n",
+    "        earliest_timestamp = master_timestamps[0]\n",
+    "        latest_timestamp = master_timestamps[-1]\n",
+    "        print(f\"Cutting {(100 * (1 - len(master_timestamps) / len(master_timestamps_full))):.2f}% of the data to synchronize the timestamp start and end\")\n",
     "\n",
-    "    total_time = latest_timestamp - earliest_timestamp\n",
+    "        total_time = latest_timestamp - earliest_timestamp\n",
     "\n",
-    "    gaps = []\n",
-    "    for name, data in flight.items():\n",
-    "        current_timestamps_full = data[\"timestamps\"]\n",
-    "        current_timestamps = current_timestamps_full[(current_timestamps_full > earliest_timestamp) & (current_timestamps_full < latest_timestamp)]\n",
-    "        current_timestamps_augmented = np.concatenate([[earliest_timestamp], current_timestamps, [latest_timestamp]])\n",
-    "        diff = np.diff(current_timestamps_augmented)\n",
-    "        current_gaps = np.where(diff > interval_threshold)[0]\n",
-    "        for gap in current_gaps:\n",
-    "            gap_start = data[\"timestamps\"][gap]\n",
-    "            gap_end = data[\"timestamps\"][gap+1]\n",
-    "            gaps.append((gap_start, gap_end))\n",
-    "    gaps_sorted = sorted(gaps, key=lambda x: x[0])\n",
+    "        gaps = []\n",
+    "        for name, data in flight[\"data\"].items():\n",
+    "            current_timestamps_full = data[\"timestamps\"]\n",
+    "            current_timestamps = current_timestamps_full[(current_timestamps_full > earliest_timestamp) & (current_timestamps_full < latest_timestamp)]\n",
+    "            current_timestamps_augmented = np.concatenate([[earliest_timestamp], current_timestamps, [latest_timestamp]])\n",
+    "            diff = np.diff(current_timestamps_augmented)\n",
+    "            current_gaps = np.where(diff > interval_threshold)[0]\n",
+    "            for gap in current_gaps:\n",
+    "                gap_start = data[\"timestamps\"][gap]\n",
+    "                gap_end = data[\"timestamps\"][gap+1]\n",
+    "                gaps.append((gap_start, gap_end))\n",
+    "        gaps_sorted = sorted(gaps, key=lambda x: x[0])\n",
     "\n",
     "\n",
-    "    current_gap_start = None\n",
-    "    current_gap_end = None\n",
-    "    combined_gaps = []\n",
+    "        current_gap_start = None\n",
+    "        current_gap_end = None\n",
+    "        combined_gaps = []\n",
     "\n",
-    "    for i, (gap_start, gap_end) in enumerate(gaps_sorted):\n",
-    "        if current_gap_start is None:\n",
-    "            current_gap_start = gap_start\n",
-    "        \n",
-    "        if current_gap_end is None:\n",
-    "            current_gap_end = gap_end\n",
-    "        \n",
-    "        if gap_end > current_gap_end:\n",
-    "            current_gap_end = gap_end\n",
-    "        \n",
-    "        if i < len(gaps_sorted) - 1:\n",
-    "            next_gap_start, next_gap_end = gaps_sorted[i+1]\n",
-    "            if next_gap_start - current_gap_end > interval_threshold:\n",
-    "                print(f\"Gap: {current_gap_start} - {current_gap_end}\")\n",
+    "        for i, (gap_start, gap_end) in enumerate(gaps_sorted):\n",
+    "            if current_gap_start is None:\n",
+    "                current_gap_start = gap_start\n",
+    "            \n",
+    "            if current_gap_end is None:\n",
+    "                current_gap_end = gap_end\n",
+    "            \n",
+    "            if gap_end > current_gap_end:\n",
+    "                current_gap_end = gap_end\n",
+    "            \n",
+    "            if i < len(gaps_sorted) - 1:\n",
+    "                next_gap_start, next_gap_end = gaps_sorted[i+1]\n",
+    "                if next_gap_start - current_gap_end > interval_threshold:\n",
+    "                    print(f\"Gap: {current_gap_start} - {current_gap_end}\")\n",
+    "                    combined_gaps.append((current_gap_start, current_gap_end))\n",
+    "                    current_gap_start = None\n",
+    "                    current_gap_end = None\n",
+    "            else:\n",
+    "                print(f\"Gap start {gap_start} - {gap_end}\")\n",
+    "                print(f\"Final Gap: {current_gap_start} - {current_gap_end}\")\n",
     "                combined_gaps.append((current_gap_start, current_gap_end))\n",
-    "                current_gap_start = None\n",
-    "                current_gap_end = None\n",
-    "        else:\n",
-    "            print(f\"Gap start {gap_start} - {gap_end}\")\n",
-    "            print(f\"Final Gap: {current_gap_start} - {current_gap_end}\")\n",
-    "            combined_gaps.append((current_gap_start, current_gap_end))\n",
-    "    print(f\"Number of gaps: {len(combined_gaps)}\")\n",
+    "        print(f\"Number of gaps: {len(combined_gaps)}\")\n",
     "\n",
-    "    total_gap_time = sum([gap_end - gap_start for gap_start, gap_end in combined_gaps])\n",
-    "    assert total_gap_time < 0.1 * total_time, f\"Total gap time: {total_gap_time:.2f}s\"\n",
+    "        total_gap_time = sum([gap_end - gap_start for gap_start, gap_end in combined_gaps])\n",
+    "        assert total_gap_time < 0.1 * total_time, f\"Total gap time: {total_gap_time:.2f}s\"\n",
     "\n",
-    "    subflights = []\n",
-    "    current_segment_start_timestamp = earliest_timestamp\n",
-    "    for gap_start, gap_end in [*combined_gaps, (latest_timestamp, latest_timestamp)]:\n",
-    "        segment_time = gap_start - current_segment_start_timestamp\n",
-    "        if segment_time > 0.01 * total_time:\n",
-    "            current_segment_timestamps = master_timestamps[(master_timestamps > current_segment_start_timestamp) & (master_timestamps < gap_start)]\n",
-    "            sub_flight = {\n",
-    "                name: {\n",
-    "                    \"timestamps\": current_segment_timestamps,\n",
-    "                    \"values\": np.interp(current_segment_timestamps, data[\"timestamps\"], data[\"values\"])\n",
-    "                } for name, data in flight.items()\n",
-    "            }\n",
-    "            subflights.append(sub_flight)\n",
-    "        else:\n",
-    "            print(f\"Skipping segment of length {segment_time:.2f}s\")\n",
-    "        current_segment_start_timestamp = gap_end\n",
-    "    print(f\"Number of subflights: {len(subflights)}\")\n",
-    "    print(subflights[0].keys())\n",
+    "        subflights = []\n",
+    "        current_segment_start_timestamp = earliest_timestamp\n",
+    "        for gap_start, gap_end in [*combined_gaps, (latest_timestamp, latest_timestamp)]:\n",
+    "            segment_time = gap_start - current_segment_start_timestamp\n",
+    "            if segment_time > 0.01 * total_time:\n",
+    "                current_segment_timestamps = master_timestamps[(master_timestamps > current_segment_start_timestamp) & (master_timestamps < gap_start)]\n",
+    "                sub_flight = {\n",
+    "                    name: {\n",
+    "                        \"timestamps\": current_segment_timestamps,\n",
+    "                        \"values\": np.interp(current_segment_timestamps, data[\"timestamps\"], data[\"values\"])\n",
+    "                    } for name, data in flight[\"data\"].items()\n",
+    "                }\n",
+    "                subflights.append(sub_flight)\n",
+    "            else:\n",
+    "                print(f\"Skipping segment of length {segment_time:.2f}s\")\n",
+    "            current_segment_start_timestamp = gap_end\n",
+    "        print(f\"Number of subflights: {len(subflights)}\")\n",
+    "        print(subflights[0].keys())\n",
     "\n",
     "\n",
-    "    for subflight in subflights:\n",
-    "        plt.figure()\n",
-    "        plt.title(flight_i)\n",
-    "        for i, key in enumerate([f\"actuator_motors_mux_control[{i}]\" for i in range(4)]):\n",
-    "            ts = subflight[key]\n",
-    "            plt.plot(ts[\"timestamps\"], ts[\"values\"], label=f\"motor {i}\")\n",
-    "        plt.legend()\n",
-    "    \n",
-    "    flights_subflights.append(subflights)"
+    "        for subflight in subflights:\n",
+    "            plt.figure()\n",
+    "            plt.title(flight[\"name\"])\n",
+    "            for i, key in enumerate([f\"actuator_motors_mux_control[{i}]\" for i in range(4)]):\n",
+    "                ts = subflight[key]\n",
+    "                plt.plot(ts[\"timestamps\"], ts[\"values\"], label=f\"motor {i}\")\n",
+    "            plt.legend()\n",
+    "        \n",
+    "        for subflight_i, subflight in enumerate(subflights):\n",
+    "            flights_output.append({\n",
+    "                \"name\": flight[\"name\"] + f\"_{subflight_i}\",\n",
+    "                \"timestamps\": subflight[highest_frequency_name][\"timestamps\"],\n",
+    "                \"data\": subflight\n",
+    "            })\n",
+    "    return flights_output"
    ]
   },
   {
@@ -659,6 +674,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sliced_and_interpolated_flights = slice_gaps_and_interpolate(flights)\n",
+    "\n",
+    "\n",
     "from scipy.spatial.transform import Rotation as R\n",
     "rotor_x_displacement = 0.4179/2\n",
     "rotor_y_displacement = 0.481332/2\n",
@@ -719,29 +737,37 @@
     "        previous_t = t\n",
     "    return np.array(rpms_filtered)\n",
     "\n",
-    "for flight in flights_subflights:\n",
-    "    for subflight in flight:\n",
-    "        num_steps = len(subflight[highest_frequency_name][\"timestamps\"])\n",
-    "        rpm_setpoints = np.array([[subflight[f\"{output_topic}_control[{i}]\"][\"values\"][step_i] for i in range(4)] for step_i in range(num_steps)])\n",
-    "        timestamps = subflight[highest_frequency_name][\"timestamps\"]\n",
-    "        rpms_subflight = filter_rpms(timestamps, rpm_setpoints, T_m)\n",
-    "        for step_i in range(num_steps):\n",
-    "            t = subflight[highest_frequency_name][\"timestamps\"][step_i]\n",
-    "            acceleration = FRD2FLU(np.array([subflight[f\"vehicle_acceleration_xyz[{i}]\"][\"values\"][step_i] for i in range(3)]))\n",
-    "            accelerations.append(acceleration)\n",
-    "            b.append(model[\"mass\"] * acceleration)\n",
-    "            current_A = []\n",
-    "            rpm = rpms_subflight[step_i]\n",
-    "            for motor_i in range(4):\n",
-    "                for exponent in exponents:\n",
-    "                    current_A.append(model[\"rotor_thrust_directions\"][motor_i] * rpm[motor_i] ** exponent)\n",
-    "            A.append(np.array(current_A).T)\n",
-    "            previous_t = t\n",
-    "        \n",
-    "        if rpms is None:\n",
-    "            rpms = rpms_subflight\n",
-    "        else:\n",
-    "            rpms = np.append(rpms, rpms_subflight, axis=0)\n",
+    "# we want to do something\n",
+    "# we have selected flights to use for this\n",
+    "# cut out the relevant timeframe\n",
+    "# we slice the flights based on gaps and interpolate\n",
+    "# we then preprocess the data with time correlation (depends on the motor model) => makes the data iid\n",
+    "# we use the iid data to estimate parameters\n",
+    "\n",
+    "\n",
+    "\n",
+    "for flight in sliced_and_interpolated_flights:\n",
+    "    num_steps = len(flight[\"timestamps\"])\n",
+    "    rpm_setpoints = np.array([[flight[\"data\"][f\"{output_topic}_control[{i}]\"][\"values\"][step_i] for i in range(4)] for step_i in range(num_steps)])\n",
+    "    timestamps = flight[\"timestamps\"]\n",
+    "    rpms_subflight = filter_rpms(timestamps, rpm_setpoints, T_m)\n",
+    "    for step_i in range(num_steps):\n",
+    "        t = flight[\"timestamps\"][step_i]\n",
+    "        acceleration = FRD2FLU(np.array([flight[\"data\"][f\"vehicle_acceleration_xyz[{i}]\"][\"values\"][step_i] for i in range(3)]))\n",
+    "        accelerations.append(acceleration)\n",
+    "        b.append(model[\"mass\"] * acceleration)\n",
+    "        current_A = []\n",
+    "        rpm = rpms_subflight[step_i]\n",
+    "        for motor_i in range(4):\n",
+    "            for exponent in exponents:\n",
+    "                current_A.append(model[\"rotor_thrust_directions\"][motor_i] * rpm[motor_i] ** exponent)\n",
+    "        A.append(np.array(current_A).T)\n",
+    "        previous_t = t\n",
+    "    \n",
+    "    if rpms is None:\n",
+    "        rpms = rpms_subflight\n",
+    "    else:\n",
+    "        rpms = np.append(rpms, rpms_subflight, axis=0)\n",
     "        \n",
     "\n",
     "rpms = np.array(rpms)\n",
@@ -794,7 +820,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rpm_setpoints = np.array([[subflight[f\"{output_topic}_control[{i}]\"][\"values\"][step_i] for i in range(4)] for step_i in range(num_steps)])\n",
     "motor_model = lambda i, rpm: K_f[i] @ np.array([rpm ** exponent for exponent in exponents])\n",
     "combine_motor_models = lambda rpms: np.array([motor_model(i, rpm) for i, rpm in enumerate(rpms)]).sum(axis=0)\n",
     "plt.figure()\n",
