--- a/sysid/analyze.ipynb
+++ b/sysid/analyze.ipynb
@@ -519,6 +519,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 0: Load the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -545,6 +552,43 @@
     "        }\n",
     "    } for name, df in zip(ulog_files, dfs)\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 1: Plot the flights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_flights(flights):\n",
+    "    for flight in flights:\n",
+    "        plt.figure()\n",
+    "        plt.title(flight[\"name\"])\n",
+    "        for motor_i, motor in enumerate([f\"{output_topic}_control[{i}]\" for i in range(4)]):\n",
+    "            plt.plot(flight[\"data\"][motor][\"timestamps\"], flight[\"data\"][motor][\"values\"], label=f\"motor {motor_i}\")\n",
+    "        plt.show()\n",
+    "plot_flights(flights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 2: Select Flights and Time Slices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 3: Detect gaps and interpolate data"
    ]
   },
   {
@@ -674,8 +718,123 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sliced_and_interpolated_flights = slice_gaps_and_interpolate(flights)\n",
+    "sliced_and_interpolated_flights = slice_gaps_and_interpolate(flights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 4: Apply stateful transformation (filter motor data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
+    "def filter_rpms(timestamps, rpm_setpoints, T_m):\n",
+    "    rpms_filtered = []\n",
+    "    rpm = None\n",
+    "    previous_t = None\n",
+    "    for t, rpm_setpoint in zip(timestamps, rpm_setpoints):\n",
+    "        if rpm is None:\n",
+    "            rpm = rpm_setpoint\n",
+    "        else:\n",
+    "            delta_t = t - previous_t\n",
+    "            alpha = np.exp(-delta_t / T_m)\n",
+    "            rpm = alpha*rpm + (1-alpha) * rpm_setpoint\n",
+    "        rpms_filtered.append(rpm)\n",
+    "        previous_t = t\n",
+    "    return np.array(rpms_filtered)\n",
+    "\n",
+    "def combine(flights, T_m, frd=True):\n",
+    "    def FRD2FLU(x):\n",
+    "        return np.array([x[0], -x[1], -x[2]])\n",
+    "\n",
+    "    def FRD2FLU_quat(q):\n",
+    "        return R.from_quat([q[1], -q[2], -q[3], q[0]])\n",
+    "    from copy import deepcopy\n",
+    "    flights = deepcopy(flights)\n",
+    "    for flight in flights:\n",
+    "        timestamps = flight[\"timestamps\"]\n",
+    "        # num_steps = len(timestamps)\n",
+    "        rpm_setpoints = np.array([flight[\"data\"][f\"{output_topic}_control[{i}]\"][\"values\"] for i in range(4)]).T\n",
+    "        flight[\"rpm_setpoints\"] = rpm_setpoints\n",
+    "        flight[\"rpms\"] = filter_rpms(timestamps, rpm_setpoints, T_m)\n",
+    "        acceleration = np.array([flight[\"data\"][f\"vehicle_acceleration_xyz[{i}]\"][\"values\"] for i in range(3)]).T\n",
+    "        flight[\"acceleration\"] = np.array(list(map(FRD2FLU, acceleration))) if frd else acceleration\n",
+    "        omega = np.array([flight[\"data\"][f\"vehicle_angular_velocity_xyz[{i}]\"][\"values\"] for i in range(3)]).T\n",
+    "        flight[\"omega\"] = np.array(list(map(FRD2FLU, omega))) if frd else omega\n",
+    "        domega = np.array([flight[\"data\"][f\"vehicle_angular_velocity_xyz_derivative[{i}]\"][\"values\"] for i in range(3)]).T\n",
+    "        flight[\"domega\"] = np.array(list(map(FRD2FLU, domega))) if frd else domega\n",
+    "    \n",
+    "    return {\n",
+    "        \"rpm_setpoints\": np.concatenate([flight[\"rpm_setpoints\"] for flight in flights]),\n",
+    "        \"rpms\": np.concatenate([flight[\"rpms\"] for flight in flights]),\n",
+    "        \"acceleration\": np.concatenate([flight[\"acceleration\"] for flight in flights]),\n",
+    "        \"omega\": np.concatenate([flight[\"omega\"] for flight in flights]),\n",
+    "        \"domega\": np.concatenate([flight[\"domega\"] for flight in flights])\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T_m = 0.05\n",
+    "combined = combine(sliced_and_interpolated_flights, T_m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined[\"acceleration\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# we want to do something\n",
+    "# we have selected flights to use for this\n",
+    "# cut out the relevant timeframe\n",
+    "# we slice the flights based on gaps and interpolate\n",
+    "# we then preprocess the data with time correlation (depends on the motor model) => makes the data iid\n",
+    "# we use the iid data to estimate parameters\n",
+    "\n",
+    "def estimate_motor_parameters(combined, model, exponents):\n",
+    "    b = []\n",
+    "    A = []\n",
+    "\n",
+    "\n",
+    "    num_steps = len(combined[\"rpms\"])\n",
+    "    for step_i in range(num_steps):\n",
+    "        acceleration = combined[\"acceleration\"][step_i]\n",
+    "        b.append(model[\"mass\"] * acceleration)\n",
+    "        current_A = []\n",
+    "        rpm = combined[\"rpms\"][step_i]\n",
+    "        for motor_i in range(4):\n",
+    "            for exponent in exponents:\n",
+    "                current_A.append(model[\"rotor_thrust_directions\"][motor_i] * rpm[motor_i] ** exponent)\n",
+    "        A.append(np.array(current_A).T)\n",
+    "\n",
+    "    A = np.array(A).reshape(-1, 4 * len(exponents))\n",
+    "    b = np.array(b).reshape(-1)\n",
+    "    print(f\"A shape: {A.shape}\")\n",
+    "    print(f\"b shape: {b.shape}\")\n",
+    "    K_f = np.linalg.lstsq(A, b, rcond=None)[0].reshape(-1, len(exponents))\n",
+    "    return K_f\n",
     "\n",
     "from scipy.spatial.transform import Rotation as R\n",
     "rotor_x_displacement = 0.4179/2\n",
@@ -704,90 +863,12 @@
     "    ])\n",
     "}\n",
     "g = np.array([0, 0, -model[\"gravity\"]])\n",
-    "\n",
-    "def FRD2FLU(x):\n",
-    "    return np.array([x[0], -x[1], -x[2]])\n",
-    "\n",
-    "def FRD2FLU_quat(q):\n",
-    "    return R.from_quat([q[1], -q[2], -q[3], q[0]])\n",
-    "\n",
-    "\n",
-    "b = []\n",
-    "A = []\n",
     "T_m = 0.05\n",
-    "previous_t = None\n",
-    "rpms = None\n",
     "exponents = [0, 2]\n",
-    "\n",
-    "accelerations = []\n",
-    "\n",
-    "\n",
-    "def filter_rpms(timestamps, rpm_setpoints, T_m):\n",
-    "    rpms_filtered = []\n",
-    "    rpm = None\n",
-    "    previous_t = None\n",
-    "    for t, rpm_setpoint in zip(timestamps, rpm_setpoints):\n",
-    "        if rpm is None:\n",
-    "            rpm = rpm_setpoint\n",
-    "        else:\n",
-    "            delta_t = t - previous_t\n",
-    "            alpha = np.exp(-delta_t / T_m)\n",
-    "            rpm = alpha*rpm + (1-alpha) * rpm_setpoint\n",
-    "        rpms_filtered.append(rpm)\n",
-    "        previous_t = t\n",
-    "    return np.array(rpms_filtered)\n",
-    "\n",
-    "# we want to do something\n",
-    "# we have selected flights to use for this\n",
-    "# cut out the relevant timeframe\n",
-    "# we slice the flights based on gaps and interpolate\n",
-    "# we then preprocess the data with time correlation (depends on the motor model) => makes the data iid\n",
-    "# we use the iid data to estimate parameters\n",
-    "\n",
-    "\n",
-    "\n",
-    "for flight in sliced_and_interpolated_flights:\n",
-    "    num_steps = len(flight[\"timestamps\"])\n",
-    "    rpm_setpoints = np.array([[flight[\"data\"][f\"{output_topic}_control[{i}]\"][\"values\"][step_i] for i in range(4)] for step_i in range(num_steps)])\n",
-    "    timestamps = flight[\"timestamps\"]\n",
-    "    rpms_subflight = filter_rpms(timestamps, rpm_setpoints, T_m)\n",
-    "    for step_i in range(num_steps):\n",
-    "        t = flight[\"timestamps\"][step_i]\n",
-    "        acceleration = FRD2FLU(np.array([flight[\"data\"][f\"vehicle_acceleration_xyz[{i}]\"][\"values\"][step_i] for i in range(3)]))\n",
-    "        accelerations.append(acceleration)\n",
-    "        b.append(model[\"mass\"] * acceleration)\n",
-    "        current_A = []\n",
-    "        rpm = rpms_subflight[step_i]\n",
-    "        for motor_i in range(4):\n",
-    "            for exponent in exponents:\n",
-    "                current_A.append(model[\"rotor_thrust_directions\"][motor_i] * rpm[motor_i] ** exponent)\n",
-    "        A.append(np.array(current_A).T)\n",
-    "        previous_t = t\n",
-    "    \n",
-    "    if rpms is None:\n",
-    "        rpms = rpms_subflight\n",
-    "    else:\n",
-    "        rpms = np.append(rpms, rpms_subflight, axis=0)\n",
-    "        \n",
-    "\n",
-    "rpms = np.array(rpms)\n",
-    "accelerations = np.array(accelerations)\n",
-    "\n",
-    "A = np.array(A).reshape(-1, 4 * len(exponents))\n",
-    "b = np.array(b).reshape(-1)\n",
-    "print(f\"A shape: {A.shape}\")\n",
-    "print(f\"b shape: {b.shape}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "K_f = np.linalg.lstsq(A, b, rcond=None)[0].reshape(-1, len(exponents))\n",
+    "K_f = estimate_motor_parameters(combined, model, exponents)\n",
     "K_f_mean = K_f.mean(axis=0)\n",
-    "print(K_f)"
+    "print(f\"K_f: {K_f}\")\n",
+    "print(f\"K_f_mean: {K_f_mean}\")"
    ]
   },
   {
@@ -810,22 +891,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rpms.shape\n",
-    "# accelerations.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "motor_model = lambda i, rpm: K_f[i] @ np.array([rpm ** exponent for exponent in exponents])\n",
     "combine_motor_models = lambda rpms: np.array([motor_model(i, rpm) for i, rpm in enumerate(rpms)]).sum(axis=0)\n",
     "plt.figure()\n",
     "plt.title(\"Predicted vs Actual Thrust (individual motor models)\")\n",
-    "predicted_thrust = np.array(list(map(combine_motor_models, rpms)))\n",
-    "actual_thrust = accelerations[:, 2] * model[\"mass\"]\n",
+    "predicted_thrust = np.array(list(map(combine_motor_models, combined[\"rpms\"])))\n",
+    "actual_thrust = combined[\"acceleration\"][:, 2] * model[\"mass\"]\n",
     "motor_models_description = \"\\n\".join([f\"motor {i}: {', '.join([f'K_f{exponent}={k:.2f}' for exponent, k in zip(exponents, K_f[i])])}\" for i in range(4)])\n",
     "plt.scatter(predicted_thrust, actual_thrust, s=0.1, label=motor_models_description)\n",
     "min_thrust = min(predicted_thrust.min(), actual_thrust.min())\n",
@@ -846,8 +917,8 @@
     "plt.figure()\n",
     "plt.title(\"Mean motor model\")\n",
     "label = f\"model: {', '.join([f'K_f{exponent}={k:.2f}' for exponent, k in zip(exponents, K_f_mean)])}\"\n",
-    "plt.scatter((rpms ** 2).sum(axis=1), actual_thrust, s=0.1, label=label)\n",
-    "inputs = np.linspace(rpms.min(), (rpms**2).sum(axis=1).max(), 100)\n",
+    "plt.scatter((combined[\"rpms\"] ** 2).sum(axis=1), actual_thrust, s=0.1, label=label)\n",
+    "inputs = np.linspace(combined[\"rpms\"].min(), (combined[\"rpms\"]**2).sum(axis=1).max(), 100)\n",
     "plt.plot(inputs, np.array([K_f_mean[0]*4 + K_f_mean[1] * ip for ip in inputs]) , color=\"red\")\n",
     "plt.legend()\n",
     "plt.show()"
@@ -859,9 +930,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "lowest_frequency = None\n",
     "lowest_frequency_column = None\n",
     "for c in wanted_columns:\n",
